--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,23 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-content {
+  background-color: #282c34;
+  min-height: 60vh;
+}
+
+.App-footer {
+  background-color: #353a44;
+  min-height: 20vh;
 }
 
 .App-link {
